--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "scss": "node-sass client/_scss/main.scss -o client/css"
   },
   "dependencies": {
+    "angular": "1.4.9",
+    "angular-route": "1.4.9",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
     "bootstrap": "3.3.6",
