--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server/app.js",
-    "livereload": "live-reload --port 9091 client/",
-    "build:scss": "node-sass client/_scss/main.scss -o client/css",
-    "watch:scss": "npm run build:scss -- -w",
-    "watch:client": "npm run watch:scss & npm run livereload"
+    "start:mongodb": "mongod --bind_ip=$IP --dbpath=data --nojournal --smallfiles",
+    "livereload": "live-reload --port 9091 public/",
+    "build:css": "node-sass public/_scss/main.scss -o public/css",
+    "watch:css": "npm run build:css -- -w",
+    "watch:public": "npm run watch:scss & npm run livereload"
   },
   "dependencies": {
     "angular": "1.4.9",
