--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "angular": "1.4.9",
+    "angular-messages": "1.5.0",
     "angular-route": "1.4.9",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
