Add parallelshell to set-up a serve:dev npm script

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "start": "nodemon server/app.js",
     "start:mongodb": "mongod --bind_ip=$IP --dbpath=data --nojournal --smallfiles",
     "prelint": "npm run jscs",
-    "lint": "jshint --reporter=node_modules/jshint-stylish public/**/*.js server/**/*.js",
-    "jscs": "jscs public/**/*.js server/**/*.js",
+    "lint": "jshint --reporter=node_modules/jshint-stylish public/**/*.js server/*.js server/**/*.js",
+    "jscs": "jscs public/**/*.js server/*.js server/**/*.js",
     "livereload": "live-reload --port 9091 public/",
+    "serve:dev": "parallelshell 'npm run watch:public' 'npm start'",
     "build:css": "node-sass public/_scss/main.scss -o public/css",
     "watch:css": "npm run build:css -- -w",
     "watch:public": "npm run watch:css & npm run livereload"
@@ -32,6 +33,7 @@
     "jscs": "2.9.0",
     "jshint": "2.9.1",
     "jshint-stylish": "2.1.0",
-    "live-reload": "1.1.0"
+    "live-reload": "1.1.0",
+    "parallelshell": "2.0.0"
   }
 }
