--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "coffee-mess",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server/app.js",
+    "start": "nodemon api/app.js",
     "start:mongodb": "mongod --bind_ip=$IP --dbpath=data --nojournal --smallfiles",
     "prelint": "npm run jscs",
-    "lint": "jshint --reporter=node_modules/jshint-stylish public/**/*.js server/*.js server/**/*.js",
-    "jscs": "jscs public/**/*.js server/*.js server/**/*.js",
+    "lint": "jshint --reporter=node_modules/jshint-stylish public/**/*.js api/*.js api/**/*.js",
+    "jscs": "jscs public/**/*.js api/*.js api/**/*.js",
     "livereload": "live-reload --port 9091 public/",
     "serve:dev": "parallelshell 'npm run watch:public' 'npm start'",
     "build:css": "node-sass public/_scss/main.scss -o public/css",
