--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "angular": "1.4.9",
+    "angular-animate": "1.5.0",
     "angular-messages": "1.5.0",
     "angular-route": "1.4.9",
     "bcrypt-nodejs": "0.0.3",
