--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "jwt-simple": "0.4.1",
     "mongoose": "^4.3.0",
     "node-sass": "3.4.2",
-    "passport": "^0.2.1",
-    "passport-http": "^0.2.2"
+    "passport": "^0.2.1"
   },
   "devDependencies": {
     "jscs": "2.9.0",
