Fix linting & code style issues

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon api/app.js",
-    "start:mongodb": "mongod --bind_ip=$IP --dbpath=data --nojournal --smallfiles",
     "start:ngrok": "ngrok http -subdomain=coffee 3000",
     "prelint": "npm run jscs",
     "lint": "jshint --reporter=node_modules/jshint-stylish public/**/*.js api/*.js api/**/*.js",
     "jscs": "jscs public/**/*.js api/*.js api/**/*.js",
     "livereload": "live-reload --port 9091 public/",
+    "mongodb:start": "mongod --bind_ip=$IP --dbpath=data --nojournal --smallfiles",
+    "mongodb:repair": "mongod --dbpath=data --repair",
     "serve:dev": "parallelshell 'npm run watch:public' 'npm start'",
     "build:css": "node-sass public/_scss/main.scss -o public/css",
     "watch:css": "npm run build:css -- -w",
