--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongoose": "^4.3.0",
     "node-sass": "3.4.2",
     "passport": "^0.2.1",
-    "passport-local": "1.0.0"
+    "passport-local": "1.0.0",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "jscs": "2.9.0",
