--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "node-sass": "3.4.2",
     "passport": "^0.2.1",
     "passport-local": "1.0.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "satellizer": "^0.14.0"
   },
   "devDependencies": {
     "jscs": "2.9.0",
