--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "4.5.0",
     "jquery": "2.2.0",
     "jwt-simple": "0.4.1",
+    "moment": "^2.13.0",
     "mongoose": "^4.3.0",
     "node-sass": "3.4.2",
     "passport": "^0.2.1",
