--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/jasonsjones/coffee-mess.git"
   },
   "author": "Jason Jones",
-  "license": "MIT"
+  "license": "MIT",
   "dependencies": {
     "angular": "1.4.9",
     "angular-animate": "1.5.0",
