--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-sass": "3.4.2",
     "passport": "^0.2.1",
     "passport-local": "1.0.0",
+    "querystring": "^0.2.0",
     "request": "^2.72.0",
     "satellizer": "^0.14.0"
   },
