Create basic template for html email

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "passport-local": "1.0.0",
     "querystring": "^0.2.0",
     "request": "^2.72.0",
-    "satellizer": "^0.14.0"
+    "satellizer": "^0.14.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "jscs": "2.9.0",
