--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.13.0",
     "mongoose": "^4.3.0",
     "node-sass": "3.4.2",
+    "nodemailer": "^2.4.1",
     "passport": "^0.2.1",
     "passport-local": "1.0.0",
     "querystring": "^0.2.0",
